# rust-commander

./: .gitignore  Cargo.toml  Makefile.toml  README.md
rust-commander/: Makefile
rust-commander/static/: commands.json
scripts/: rename-release-windows.ps1
src/: handlers.rs  main.rs  palette_manager.rs  state.rs  types.rs  websocket.rs
static/: commands.json  index.html  messages.css  script.js  script.js.backup  styles.css  test-palette-1.json  test-palette-2.json  test_existing_commands.json
static/js/: command-options.js  commands.js  connection.js  index.js  main.js  messages.js  save.js  toast.js  ui.js
static/js/components/: command-display.js  message-manager.js  palette-editor.js
static/js/utils/: api-client.js  dom-utils.js  event-manager.js  modal-manager.js  validators.js
