[package]
name = "rust-commander"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
# actix-ws = "0.2.5" # This is part of actix-web-actors now
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] } # For stream utilities
actix = "0.13" # Added actix
actix-web-actors = "4.2" # Added actix-web-actors
rust-embed = "8"
mime_guess = "2.0.5"
local-ip-address = "0.6.5"
colored = "2.0.0"
